fixtures/errors/await_outside_async.js
function foo() {
  let v = await bar();
}
